# mojovoice

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROMPT.md  RALPH-LOOP-README.md  README.md  SECURITY.md  claude-progress.txt  clippy.toml  config.example.toml  justfile  plan.md  ralph-loop.sh  rustfmt.toml  tarpaulin.toml
.claude/.claude-plugin/: plugin.json
.claude/agents/: maximus-add.md  maximus-init.md  maximus-plan.md  maximus-queue.md  maximus-review.md  maximus-validate.md
.claude/commands/: maximus-add.md  maximus-init.md  maximus-plan.md  maximus-queue.md  maximus-review.md  maximus-validate.md
.claude/references/maximus/: adapter-system.md  anti-patterns.md  auto-annotate.md  config-schema.md  cost-estimation.md  handling-worktrees.md  plan-schema.md  queue-schema.md  run-summary-schema.md  task-api.md
.claude/skills/maximus-add/: SKILL.md
.claude/skills/maximus-finish/: SKILL.md
.claude/skills/maximus-init/: SKILL.md
.claude/skills/maximus-plan/: SKILL.md
.claude/skills/maximus-queue/: SKILL.md
.claude/skills/maximus-review/: SKILL.md
.claude/skills/maximus-validate/: SKILL.md
.github/workflows/: ci.yml  release.yml
.maximus/: .gitignore  config.yml  plan.json  progress.md  queue.md
assets/audio/samples/: manifest.json
docs/buzzminson/: 2026-02-08-settings-ui-voice-recognition.md
docs/context/: 2026-01-23-audio-device-enumeration-fix.md  2026-02-06-mojo-audio-v020-linux-build-handoff.md  CLAUDE.md  current-implementation-state.md  dev-coffee-brand-style-guide.md  dev-voice-complete.md  gemini-deep-research-prompt.md  mojovoice-style-guide.md
docs/handoff/: 20251217-0202-cicd-macos-support.md  2026-01-14-model-management-handoff.md  2026-01-15-model-profiling-script.md  2026-02-12-ui-overhaul-v060.md  2026-02-13-industrial-terminal-redesign.md  2026-02-22-ui-ux-overhaul.md
docs/plans/: 2026-02-23-settings-redesign.md  2026-02-25-listen-command-design.md  2026-02-25-listen-command.md  2026-02-25-listen-default-sink-monitor.md  2026-02-26-listen-cancel.md  2026-03-07-v069-implementation.md  2026-03-07-v069-launch-design.md  2026-03-08-uiux-audit-results.md
docs/project/: 01-12-2026-code-simplifier-plan.md  2026-01-14-code-review-findings.md  2026-01-14-model-management-ui.md  2026-01-14-moonshine-implementation.md  2026-01-14-settings-ui-redesign.md  2026-02-08-settings-design-recommendations.md  model-revamp-tasklist.md  performance-benchmarks.md  phase4-implementation-plan.md  production-polish-tasks.md  settings-design-mockup.html
docs/project/archive/: cicd-task-list.md  frontend-plan.md  open-source-tasklist.md  rust-implementation.md  tasklist.md
docs/project/tasks/: fix-candle-decoder-priority.md  fix-speculative-decoding.md  whisper-candle-migration.md
docs/project/todos/: roadmap.md
docs/projects/: performance-benchmarks.md
docs/research/: 2026-01-14-speech-models-comparison.md  2026-01-16-whisper-customization-for-developer-voice.md  2026-02-04-backlink-building-domain-authority-strategies.md  2026-02-04-competitive-seo-analysis.md  2026-02-04-niche-seo-strategies-developer-tools.md  2026-02-06-actionable-seo-recommendations.md  2026-02-06-backlink-building-domain-authority-strategies.md  2026-02-06-competitor-seo-strategies-analysis.md  2026-02-06-mojovoice-seo-content-strategy.md  2026-02-06-niche-seo-research-summary.md  2026-02-08-ai-app-ui-patterns.md  2026-02-08-component-libraries-analysis.md  2026-02-08-developer-tool-ui-patterns.md  2026-02-08-form-control-design-patterns.md  2026-02-08-ui-ux-trends-2026.md  GETTING-STARTED-WITH-RESEARCH.md  INDEX-developer-marketing-research.md
docs/testing/: history-feature-testing.md
docs/writeups/: hyprland-architectural-analysis.md
examples/: debug_cpal_devices.rs  list_audio_devices.rs  test_device_resolution.rs
integrations/: README.md
integrations/waybar/: README.md  config-snippet.jsonc  dev-voice-status.sh  hyprvoice-status.sh  install.sh  listen-config-snippet.jsonc  listen-style-snippet.css  module.jsonc  mojovoice-listen-menu.sh  mojovoice-listen-status.sh  mojovoice-status.sh  style-snippet.css  style.css
lib/: libmojo_audio.dylib
scripts/: dev-update.sh  doctor.sh  install.sh  run-cuda12-ollama.sh
src/: error.rs  lib.rs  main.rs
src/audio/: capture.rs.pipewire-backup  mod.rs
src/benchmark/: manifest.rs  metrics.rs  mod.rs  output.rs  report.rs  report_style.css
src/commands/: enigo_test.rs  mod.rs
src/config/: settings.rs
src/daemon/: client.rs  protocol.rs  server.rs
src/history/: mod.rs  storage.rs
src/model/: registry.rs
src/output/: inject.rs  mod.rs
src/state/: mod.rs  paths.rs  toggle.rs
src/transcribe/: CLAUDE.md  candle_engine.rs  mod.rs  mojo_ffi.rs  whisper.rs
src/vocab/: mod.rs  store.rs
tests/: audio_resampling.rs  daemon_lifecycle.rs  daemon_protocol.rs  transcription.rs
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: commands.rs  daemon_client.rs  main.rs
ui/src/components/: CommandPalette.tsx  Dashboard.tsx  DevTools.tsx  HistoryModal.tsx  HistoryView.tsx  MissionControl.tsx  ModelManagement.tsx  ModelsPanel.tsx  Navigation.tsx  PathInput.tsx  RestartBanner.tsx  Settings.tsx  SettingsPanel.tsx  TranscriptionHistory.tsx
ui/src/components/settings/: AdvancedPanel.tsx  BehaviorChip.tsx  ModelHeroCard.tsx  SettingRow.tsx  SettingsConfigTab.tsx  VocabTab.tsx
ui/src/components/ui/: Button.tsx  Card.tsx  CustomSelect.tsx  Drawer.tsx  LoadingScanner.tsx  Modal.tsx  RecordingHero.tsx  SectionHeader.tsx  StatusBar.tsx  StatusMicroIndicators.tsx  SystemStatus.tsx  Toast.tsx  TranscriptionCard.tsx
ui/src/components/wizard/: SetupWizard.tsx  WizardStep.tsx
ui/src/components/wizard/steps/: DownloadStep.tsx  HardwareStep.tsx  ModelStep.tsx  TestStep.tsx
ui/src/hooks/: useModelDownload.ts  useTranscriptionActions.ts
ui/src/lib/: ipc.ts  scale.ts
ui/src/stores/: appStore.ts
ui/src/styles/: globals.css
