[package]
name = "dev-voice"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Voice dictation for Linux developers"
license = "MIT"
repository = "https://github.com/itsdevcoffee/dev-voice"

[dependencies]
# Speech recognition
candle-core = "0.9.2-alpha.2"
candle-nn = "0.9.2-alpha.2"
candle-transformers = "0.9.2-alpha.2"
hf-hub = "0.4"
safetensors = "0.5"
tokenizers = "0.21"

# Cross-platform audio (REPLACES pipewire + libspa)
cpal = "0.16"
hound = "3.5"  # WAV file writing for audio recording saves

# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
directories = "5"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"  # Timestamps for audio file naming

scopeguard = "1.2"

# HTTP downloads
ureq = "2.9"

# Checksum verification
sha2 = "0.10"
hex = "0.4"

# Better resampling
rubato = "0.16"

# Clipboard - always available
arboard = "3.6"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"        # Mock traits for testing (PipeWire, Whisper)
serial_test = "3"       # Sequential test execution for sockets
assert_matches = "1.5"  # Pattern matching assertions

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
# rocm/hip and vulkan are currently experimental in Candle v0.9+; disabled for stability

# =============================================================================
# Platform-specific dependencies
# =============================================================================

# Signal handling for toggle mode (Unix only - macOS and Linux)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }

# macOS - uses CoreGraphics automatically
[target.'cfg(target_os = "macos")'.dependencies]
enigo = { version = "0.6" }

# Windows - uses SendInput API automatically
[target.'cfg(target_os = "windows")'.dependencies]
enigo = { version = "0.6" }

# Linux - Wayland by default (most modern distros)
# X11 users: change ["wayland"] to ["x11rb"] below
[target.'cfg(target_os = "linux")'.dependencies]
enigo = { version = "0.6", default-features = false, features = ["wayland"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
